--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
     <!-- Items menu -->
     <nav class="flex flex-col text-left text-md font-normal flex-1">
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Monitores</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">PC Ensambladas</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Personalizar mi PC</a>
+      <a href="./productos.html" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
+      <a href="./notebooks.html" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
+      <a href="./monitores.html" class="py-3 border-t border-gray-700 px-4">Monitores</a>
+      <a href="./pcsEnsambladas.html" class="py-3 border-t border-gray-700 px-4">PC Ensambladas</a>
+      <a href="./sobreNosotros.html" class="py-3 border-t border-gray-700 px-4">Sobre Nosotros</a>
     </nav>
 
     <!-- Seccion login / cuenta Mobile -->
@@ -948,8 +948,8 @@
   </footer>
 
   <button id="btnSubir"
-    class="hidden fixed bottom-6 right-6 bg-violet-700 hover:bg-violet-800 text-white p-4 rounded-full shadow-lg transition-all duration-500 transform hover:scale-110 hover:shadow-violet-500/50">
-    <i class="fa-solid fa-arrow-up"></i>
+    class="hidden fixed bottom-6 right-6 bg-violet-700 hover:bg-violet-800 text-white p-4 rounded-full shadow-lg transition-all duration-500 transform hover:scale-110 hover:shadow-violet-500/50 z-[9999]">
+    <i class="fa-solid fa-arrow-up z-[9999]"></i>
   </button>
   <script src="./js/script.js"></script>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
