--- a/componentes.html
+++ b/componentes.html
@@ -97,11 +97,6 @@
           PC Ensambladas
         </a>
       </li>
-      <li>
-        <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Sobre Nosotros
-        </a>
-      </li>
     </ul>
   </div>
 </nav>
@@ -119,11 +114,11 @@
 
     <!-- Items menu -->
     <nav class="flex flex-col text-left text-md font-normal flex-1">
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Monitores</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">PC Ensambladas</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Personalizar mi PC</a>
+      <a href="./productos.html" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
+      <a href="./notebooks.html" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
+      <a href="./monitores.html" class="py-3 border-t border-gray-700 px-4">Monitores</a>
+      <a href="./pcsEnsambladas.html" class="py-3 border-t border-gray-700 px-4">PC Ensambladas</a>
+      <a href="./sobreNosotros.html" class="py-3 border-t border-gray-700 px-4">Personalizar mi PC</a>
     </nav>
 
     <!-- Seccion login / cuenta Mobile -->
@@ -221,19 +216,15 @@
           <!-- Redes Sociales -->
           <h4 class="text-sm font-medium mb-3 text-gray-300">Síguenos</h4>
           <div class="flex space-x-4">
-            <a href="#"
+            <a href="https://www.facebook.com/share/p/1BVWvrHjZw/"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#"
+            <a href="https://www.instagram.com/nexostorerc/?hl=es-la"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#"
+            <a href="https://www.youtube.com/@NexoStoreRC"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-youtube"></i>
             </a>
