--- a/index.html
+++ b/index.html
@@ -105,12 +105,6 @@
             PC Ensambladas
           </a>
         </li>
-        <li>
-          <a href="./componentes.html"
-            class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-            Sobre Nosotros
-          </a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -910,19 +904,15 @@
           <!-- Redes Sociales -->
           <h4 class="text-sm font-medium mb-3 text-gray-300">Síguenos</h4>
           <div class="flex space-x-4">
-            <a href="#"
+            <a href="https://www.facebook.com/share/p/1BVWvrHjZw/"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#"
+            <a href="https://www.instagram.com/nexostorerc/?hl=es-la"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#"
+            <a href="https://www.youtube.com/@NexoStoreRC"
               class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
               <i class="fab fa-youtube"></i>
             </a>
